Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -31,15 +31,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numbers:\n",
+    "Numbers:there are 2 main types of numbers integers and floats integers are whole numbers and floating point numbers are numbers with a decimal.\n",
     "\n",
-    "Strings:\n",
+    "Strings:Strings are sequences of characters using syntax of either single or double quotes\n",
     "\n",
-    "Lists:\n",
+    "Lists:an ordered sequences that can hold a variety of objects\n",
     "\n",
-    "Tuples:\n",
+    "Tuples:they are very similar to lists however one key difference is immutibility\n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries:are a unordered mapping for storing objects\n"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "metadata": {},
    "source": [
     "## Numbers\n",
-    "\n",
+    "100.25 * 2 =200.50 / 2 = 100.25 ** 2 = 10,050.0625 + 1 = 10,051.0625 - 9,950.8125\n",
     "Write an equation that uses multiplication, division, an exponent, addition, and subtraction that is equal to 100.25.\n",
     "\n",
     "Hint: This is just to test your memory of the basic arithmetic commands, work backwards from 100.25"
@@ -58,7 +58,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [] 
   },
   {
    "cell_type": "markdown",
@@ -67,11 +67,12 @@
     "Answer these 3 questions without typing code. Then type code to check your answer.\n",
     "\n",
     "    What is the value of the expression 4 * (6 + 5)\n",
-    "    \n",
+    "    44\n",
     "    What is the value of the expression 4 * 6 + 5 \n",
-    "    \n",
-    "    What is the value of the expression 4 + 6 * 5 "
-   ]
+    "    29\n",
+    "    What is the value of the expression 4 + 6 * 5"
+    "    34\n",
+   ]       
   },
   {
    "cell_type": "code",
